name: kage
version: 0.1.0.0
cabal-version: >=1.10
build-type: Simple
license: BSD3
license-file: LICENSE
copyright: 2016 Florent Lioult
maintainer: florent@hihan.org
homepage: https://github.com/Chatanga/kage#readme
synopsis: A sandbox for playing with Haskell, OpenGL, Physics, AI, etc.
description:
    Please see README.md
category: Graphics
author: Florent Lioult

source-repository head
    type: git
    location: https://github.com/Chatanga/kage

library
    exposed-modules:
        Lib
    build-depends:
        base >=4.7 && <5,
        containers -any,
        GLFW-b -any,
        JuicyPixels -any,
        OpenGL -any,
        OpenGLRaw -any,
        ObjectName -any,
        StateVar -any,
        filepath -any,
        hslogger -any,
        linear -any,
        mtl -any,
        random -any,
        text -any,
        bytestring -any,
        regex-compat -any,
        time -any,
        vector -any,
        freetype2 -any,
        parallel -any,
        rosezipper -any,
        lens -any
    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
        Common.Debug
        Common.Misc
        Common.Random
        Graphics.Catalog
        Graphics.Color
        Graphics.Ext.Program
        Graphics.Ext.Shader
        Graphics.Ext.Uniform
        Graphics.Ext.Utils
        Graphics.Ext.Variables
        Graphics.Application
        Graphics.Buffer
        Graphics.Error
        Graphics.Font
        Graphics.FunctionalGL
        Graphics.Geometry
        Graphics.Heightmap
        Graphics.Layouts
        Graphics.Scene
        Graphics.Shader
        Graphics.Texture
        Graphics.View
        Graphics.World
        Physics.Aircraft
        Physics.RigidBody

executable kage-exe
    main-is: Main.hs
    build-depends:
        base -any,
        kage -any
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite kage-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base -any,
        kage -any,
        linear -any
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N
