name:           kage
version:        1.0
cabal-version:  >=1.10
build-type:     Simple
license:        MIT
license-file:   LICENSE
homepage:       https://github.com/Chatanga/kage#readme
author:         Florent Lioult
maintainer:     florent@hihan.org
copyright:      2017 Florent Lioult
category:       Graphics
synopsis:       A sandbox for playing with Haskell, OpenGL, Physics, AI, etc.

source-repository head
    type: git
    location: https://github.com/Chatanga/kage

library
    hs-source-dirs: src
    exposed-modules:
        Lib
    other-modules:
        Common.Debug
        Common.Misc
        Common.Random
        Graphics.Catalog
        Graphics.Color
        Graphics.Ext.Program
        Graphics.Ext.Shader
        Graphics.Ext.Uniform
        Graphics.Ext.Utils
        Graphics.Ext.Variables
        Graphics.Application
        Graphics.Buffer
        Graphics.Error
        Graphics.Font
        Graphics.FunctionalGL
        Graphics.Geometry
        Graphics.Heightmap
        Graphics.Layouts
        Graphics.Scene
        Graphics.Shader
        Graphics.Texture
        Graphics.View
        Graphics.World
        Physics.Aircraft
        Physics.RigidBody
    build-depends:
        base >=4.7 && <5,
        containers,
        GLFW-b,
        JuicyPixels,
        OpenGL,
        OpenGLRaw,
        ObjectName,
        StateVar,
        filepath,
        hslogger,
        linear,
        mtl,
        random,
        text,
        bytestring,
        regex-compat,
        time,
        vector,
        freetype2,
        parallel,
        rosezipper,
        lens
    default-language: Haskell2010

executable kage-exe
    main-is: Main.hs
    build-depends:
        base,
        kage
    default-language: Haskell2010
    hs-source-dirs: app
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

test-suite kage-test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base,
        kage,
        linear
    default-language: Haskell2010
    hs-source-dirs: test
    ghc-options: -threaded -rtsopts -with-rtsopts=-N

